--- a/public/styles.css
+++ b/public/styles.css
@@ -1,23 +1,43 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik+Gemstones&display=swap');
-body{
-    background-color:#EEEEEE;
+@import url("https://fonts.googleapis.com/css2?family=Rubik+Gemstones&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
+body {
+  background-color: #eeeeee;
 }
-.navbar{
-    color: #222831;
-    background-color: #00ADB5;
-    position: sticky;
-}
-.navbar-brand{
-    font-family: 'Rubik Gemstones', cursive;
-}
-.card{
-    height: max-content;
-    background-color: #EEEEEE;
-}
-.card img{
+.main-container{
     width: 100%;
-    height: 190px;
+    
 }
-.card .btn{
-    background-color: #00ADB5;
+.navbar {
+  
+  background: rgba(48, 186, 193, 0.95);
+  position: sticky;
+  height: 80px;
 }
+.navbar-nav .nav-item .nav-link {
+  color: white;
+  font-weight: bold;
+  font-family: "Montserrat", sans-serif;
+}
+.navbar-brand {
+  font-family: "Rubik Gemstones", cursive;
+  color: white;
+}
+.card {
+  height: max-content;
+  background-color: #eeeeee;
+}
+
+.card img {
+  width: 100%;
+  height: 190px;
+}
+.card .btn {
+  background-color: #00adb5;
+  color: white;
+}
+.card-title{
+    font-family: "Montserrat", sans-serif;
+    font-weight: bolder;
+}
+
+
