--- a/public/styles.css
+++ b/public/styles.css
@@ -3,15 +3,20 @@
 body {
   background-color: #eeeeee;
 }
-.main-container{
-    width: 100%;
-    
+.main-container {
+  width: 100%;
 }
 .navbar {
-  
-  background: rgba(48, 186, 193, 0.95);
-  position: sticky;
-  height: 80px;
+   
+  /* background: rgba(48, 186, 193, 0.95);
+   */
+   background-color: black;
+  height: 55px;
+}
+.navbar-collapse {
+  /* padding: 20px; */
+  /* background: rgba(48, 186, 193, 0.95); */
+  /* width: 100%; */
 }
 .navbar-nav .nav-item .nav-link {
   color: white;
@@ -35,9 +40,119 @@ body {
   background-color: #00adb5;
   color: white;
 }
-.card-title{
-    font-family: "Montserrat", sans-serif;
-    font-weight: bolder;
+.card-title {
+  font-family: "Montserrat", sans-serif;
+  font-weight: bolder;
 }
+.colorbar {
+  width: 100%;
+  height: 10px;
 
+  /* ff 3.6+ */
+  background: -moz-linear-gradient(
+    121deg,
+    rgba(255, 255, 0, 1) 0%,
+    rgba(244, 67, 54, 1) 0%,
+    rgba(233, 30, 99, 1) 10%,
+    rgba(156, 39, 176, 1) 19%,
+    rgba(103, 58, 183, 1) 29%,
+    rgba(33, 150, 243, 1) 38%,
+    rgba(3, 169, 244, 1) 47%,
+    rgba(0, 188, 212, 1) 55%,
+    rgba(0, 150, 136, 1) 64%,
+    rgba(76, 175, 80, 1) 73%,
+    rgba(139, 192, 74, 1) 81%,
+    rgba(205, 220, 57, 1) 87%,
+    rgba(255, 235, 59, 1) 91%,
+    rgba(255, 193, 7, 1) 100%
+  );
 
+  /* safari 5.1+,chrome 10+ */
+  background: -webkit-linear-gradient(
+    121deg,
+    rgba(255, 255, 0, 1) 0%,
+    rgba(244, 67, 54, 1) 0%,
+    rgba(233, 30, 99, 1) 10%,
+    rgba(156, 39, 176, 1) 19%,
+    rgba(103, 58, 183, 1) 29%,
+    rgba(33, 150, 243, 1) 38%,
+    rgba(3, 169, 244, 1) 47%,
+    rgba(0, 188, 212, 1) 55%,
+    rgba(0, 150, 136, 1) 64%,
+    rgba(76, 175, 80, 1) 73%,
+    rgba(139, 192, 74, 1) 81%,
+    rgba(205, 220, 57, 1) 87%,
+    rgba(255, 235, 59, 1) 91%,
+    rgba(255, 193, 7, 1) 100%
+  );
+
+  /* opera 11.10+ */
+  background: -o-linear-gradient(
+    121deg,
+    rgba(255, 255, 0, 1) 0%,
+    rgba(244, 67, 54, 1) 0%,
+    rgba(233, 30, 99, 1) 10%,
+    rgba(156, 39, 176, 1) 19%,
+    rgba(103, 58, 183, 1) 29%,
+    rgba(33, 150, 243, 1) 38%,
+    rgba(3, 169, 244, 1) 47%,
+    rgba(0, 188, 212, 1) 55%,
+    rgba(0, 150, 136, 1) 64%,
+    rgba(76, 175, 80, 1) 73%,
+    rgba(139, 192, 74, 1) 81%,
+    rgba(205, 220, 57, 1) 87%,
+    rgba(255, 235, 59, 1) 91%,
+    rgba(255, 193, 7, 1) 100%
+  );
+
+  /* ie 6-9 */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#FFC107', endColorstr='#FFFF00', GradientType=0 );
+
+  /* ie 10+ */
+  background: -ms-linear-gradient(
+    121deg,
+    rgba(255, 255, 0, 1) 0%,
+    rgba(244, 67, 54, 1) 0%,
+    rgba(233, 30, 99, 1) 10%,
+    rgba(156, 39, 176, 1) 19%,
+    rgba(103, 58, 183, 1) 29%,
+    rgba(33, 150, 243, 1) 38%,
+    rgba(3, 169, 244, 1) 47%,
+    rgba(0, 188, 212, 1) 55%,
+    rgba(0, 150, 136, 1) 64%,
+    rgba(76, 175, 80, 1) 73%,
+    rgba(139, 192, 74, 1) 81%,
+    rgba(205, 220, 57, 1) 87%,
+    rgba(255, 235, 59, 1) 91%,
+    rgba(255, 193, 7, 1) 100%
+  );
+
+  /* global 94%+ browsers support */
+  background: linear-gradient(
+    121deg,
+    rgba(255, 255, 0, 1) 0%,
+    rgba(244, 67, 54, 1) 0%,
+    rgba(233, 30, 99, 1) 10%,
+    rgba(156, 39, 176, 1) 19%,
+    rgba(103, 58, 183, 1) 29%,
+    rgba(33, 150, 243, 1) 38%,
+    rgba(3, 169, 244, 1) 47%,
+    rgba(0, 188, 212, 1) 55%,
+    rgba(0, 150, 136, 1) 64%,
+    rgba(76, 175, 80, 1) 73%,
+    rgba(139, 192, 74, 1) 81%,
+    rgba(205, 220, 57, 1) 87%,
+    rgba(255, 235, 59, 1) 91%,
+    rgba(255, 193, 7, 1) 100%
+  );
+}
+.page-title {
+  font-family: "Montserrat", sans-serif;
+  font-weight: bold;
+  text-decoration: underline;
+  text-underline-offset: 10px;
+}
+.date {
+  font-family: "Montserrat", sans-serif;
+  font-weight: bolder;
+}
