--- a/public/styles.css
+++ b/public/styles.css
@@ -2,6 +2,28 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
 body {
   background-color: #eeeeee;
+   
+}
+html { 
+  overflow-y: scroll; 
+}
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #00adb5; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
 }
 .main-container {
   width: 100%;
@@ -77,6 +99,10 @@ body {
   padding: 3px;
   font-weight: 500;
   
+}
+.clock{
+  color: white;
+  margin-left: 20px;
 }
 .page-title {
   font-family: "Montserrat", sans-serif;
