--- a/public/styles.css
+++ b/public/styles.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Rubik+Gemstones&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
 body {
-  background-color: #eeeeee;
+  background-color: whitesmoke;
    
 }
 html { 
@@ -30,18 +30,21 @@ html {
 }
 .navbar {
   background-color: #00adb5;
-  height: 65px;
+  height: 85px;
 }
 .navbar-collapse {
-  /* padding: 20px; */
-  /* background: rgba(48, 186, 193, 0.95); */
-  /* width: 100%; */
+  padding: 10px;
+  background: rgba(48, 186, 193, 0.7);
+  width: 100vw;
+  height: 100%;
   background-color: #00adb5;
+  
 }
 .navbar-toggler{
+  color: white;
   display: flex;
   justify-content: space-between;
-   
+  border: none;
   width: 40px;
 }
 
@@ -65,6 +68,7 @@ html {
   height: fit-content;
   background-color: #eeeeee;
   position: relative;
+  border: none;
 }
 
 .card img {
@@ -103,7 +107,22 @@ html {
 .clock{
   color: white;
   margin-left: 20px;
+  font-size: smaller;
+  font-weight: 400;
+  margin-bottom: 0;
+
 }
+.dayandtime{
+  
+  height: 100%;
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  font-family: "Montserrat", sans-serif;
+}
+
 .page-title {
   font-family: "Montserrat", sans-serif;
   font-weight: bold;
